(Checkin for Roland.Mainz@informatik.med.uni-giessen.de). Bug 127520 "Large pictures print corrupted", r=db48x, sr=attinasi